--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,39 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <title>ITAT Container Test</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-    }
-
-    iframe {
-      width: 100%;
-      height: 600px;
-      border: 1px solid #ccc;
-    }
-
-    button {
-      margin-top: 10px;
-      padding: 8px 12px;
-    }
-  </style>
-</head>
-
-<body>
-
-  <h2>ITAT inside container</h2>
-
-  <!-- Container rendering ITAT -->
-  <iframe id="itatFrame" src="https://benkinotice-api.brchub.me/api/proxy/itat/judicial/tribunalorders"></iframe>
-
-  <br />
-
-
-
-</body>
-
-
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>frontend</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
